# engram

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  eval_cases.example.yaml  install.sh  pyproject.toml  uninstall.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml
docs/: continuous-memory.md  dynamic-memory.md
infra/engram/: README.md  agent_tail.py  app.py  attach.py  buffer.py  core.py  delegations.py  engram  engram-eye.service  engram-perceive.service  engram_mcp.py  envoy.py  fleet.py  grok_agent.py  grok_driver.py  memory_tools.py  starlight.py  tui.py  working_set.py  x_search.py  xai_common.py
infra/engram/eye/: README.md  __init__.py  bench.py  eye.py  face.py
infra/engram/perceive/: __init__.py  awake.py  bridge.py  ear.py  hearing.py  loop.py  mic.py  mind.py  percept.py  sensorium.py  voice.py
infra/engram/tests/: live_e2e_evict.py  test_activity.py  test_agent_tail.py  test_agents_panel.py  test_async_subagent.py  test_buffer.py  test_commands.py  test_context_meter.py  test_corroborate.py  test_delegations.py  test_envoy.py  test_eviction.py  test_fallback.py  test_fleet.py  test_grok_agent.py  test_grok_driver.py  test_hooks.py  test_identity.py  test_interact.py  test_interrupt.py  test_mcp_recall.py  test_mode.py  test_options.py  test_percept.py  test_permissions.py  test_provenance.py  test_queue.py  test_resume.py  test_rewind.py  test_sessions.py  (+3 more)
infra/systemd/: recall-curate.service  recall-curate.timer  recall-embedder.service  recall-reconsolidate.service  recall-reconsolidate.timer
infra/telegram/: README.md  agent_bridge.py  recall-telegram-engram.service
scripts/: floor_stress_replay.py  floor_sweep.py  install_hook.py  install_skills.py  install_systemd.sh  install_telegram_bridge.sh  leak_scan.sh  recall_embedder_daemon.py  recall_gate.py  recall_inject.py  setup_wizard.py  uninstall.py
site/: index.html
skills/curate-memory/: SKILL.md
skills/dream/: SKILL.md
skills/recall/: SKILL.md
skills/reconsolidate-memory/: SKILL.md
src/recall/: __init__.py  activation.py  cli.py  code_index.py  cogito.py  config.py  consolidate.py  curate.py  doctor.py  dream.py  dynamics.py  eval.py  index.py  notify.py  reap.py  reconsolidate.py  registry.py  rules.py  schema.py  transcripts.py
tests/: conftest.py  test_activation.py  test_claude_backoff.py  test_code_index.py  test_cogito.py  test_config.py  test_consolidate.py  test_curate.py  test_doctor.py  test_dream.py  test_dynamics.py  test_embedder_daemon.py  test_engram_app.py  test_eval.py  test_hermetic.py  test_index.py  test_reap.py  test_recall_gate.py  test_recall_inject.py  test_reconsolidate.py  test_registry_curate_sessions.py  test_registry_dream_all.py  test_rules.py  test_schema.py  test_setup_wizard.py  test_telegram_bridge.py  test_transcripts.py  test_uninstall.py
